<resources>
    <string name="app_name">Imgit</string>
    <string name="sign_in">Sign in</string>
    <string name="log_in">Log in</string>
    <string name="take_photo">Take photo</string>
    <string name="upload_photo">Upload photo</string>
    <string name="upload">Upload</string>
    <string name="show_more">Show more</string>
    <string name="copy_url">Copy direct URL</string>
    <string name="copy_html">Copy HTML tag</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="re_password">Re-password</string>
</resources>
