<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:id="@+id/form_username"/>
        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:id="@+id/form_email"/>
        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:id="@+id/form_password"/>
        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/re_password"
            android:id="@+id/form_repassword"/>
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:id="@+id/btn_sign_in"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
